core-apps/base/minio-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  name: minio-console-kontur-io-ng
  namespace: minio-operator
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: minio.kontur.io
      http:
        paths:
          - backend:
              service:
                name: console
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - minio.kontur.io
      secretName: minio-kontur-io-tls
