core-apps/base/minio-operator/s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  name: s3-test-kontur-io-ng
  namespace: minio-tenant
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: s3-test.kontur.io
      http:
        paths:
          - backend:
              service:
                name: test-tenant-hl
                port:
                  name: http-minio
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - s3-test.kontur.io
      secretName: s3-test-kontur-io-tls
